# workshopmeta

./: .env  README.md  apoiador.py  app.py  autonomo.py  chatbot_streamlit.py  custom.scss  especialista.ipynb  especialista.py  gera_log.py  index.html  index.qmd  logs_inferencia.csv  pyproject.toml  test_apoiador.py  teste_app.ipynb
