[project]
name = "workshopmeta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "langchain-tavily>=0.2.1",
    "langgraph>=0.4.8",
    "matplotlib>=3.10.3",
    "pip>=25.1.1",
    "pytest>=8.4.0",
    "streamlit>=1.45.1",
]
